Add register html code

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -61,7 +61,7 @@
                 <div class="container py-3 w-full">
                     <button type="submit" class="w-full h-16 border-[1px] border-[#CACACA] flex items-center justify-center space-x-2">
                         <img src="https://developers.google.com/static/identity/images/g-logo.png" alt="Google Logo" class="w-6 h-6">
-                        <span class="font-semibold text-lg">Увійти через Google</span>
+                        <span class="text-lg">Увійти через Google</span>
                     </button>
                 </div>
             </form>
