Fix login layout

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,29 +1,56 @@
-<body class="bg-gradient-to-b from-[#006D77] to-[#83C5BE]">
-    <div class="flex h-screen min-h-[700px]">
-        <div class="flex flex-col justify-center container md:w-full xl:w-1/2 flex-shrink-0 flex-grow-0 px-20 py-20 bg-white rounded-r-[25px] max-md:px-8 max-lg:rounded-none min-h-[700px]">
-            <h1 class="text-5xl font-medium max-md:text-4xl lg:pt-12 max-sm:pt-10">Вітаємо!</h1>
-            <div class="container pt-2">
-                <p class="text-[#6C6C6C] text-lg font-normal inline">Немає акаунту? </p>
-                <p class="text-[#6C6C6C] text-lg font-normal inline hover:underline cursor-pointer" routerLink="/register">Зареєструйтесь</p>
+<div class="animated-gradient-background flex flex-col justify-center xl:min-h-screen">
+    <div class="flex flex-col items-center">
+        <div class="w-full px-10 py-10 bg-white xl:rounded-lg xl:my-5 xl:w-1/2">
+            <h1 class="text-4xl font-medium lg:pt-12 max-sm:pt-10">Вітаємо!</h1>
+            <div class="container pt-1">
+                <p class="text-[#6C6C6C] text-md font-normal inline">Немає акаунту? </p>
+                <p class="text-[#6C6C6C] text-md font-normal inline hover:underline cursor-pointer" routerLink="/register">Зареєструйтесь</p>
             </div>
+            <form #form="ngForm">
+                <div class="mt-5">
+                    <label class="text-lg" for="email">Email <span class="text-red-600 font-bold">*</span></label>
+                    <br>
+                    <input 
+                        [(ngModel)]="this.email" 
+                        #email="ngModel" 
+                        required 
+                        maxlength="254" 
+                        email 
+                        name="email" 
+                        type="email" 
+                        class="border-[1px] px-3 py-2 mt-2 w-full" 
+                        placeholder="Введіть email"
+                        [ngClass]="email.invalid && email.touched ? 'border-red-500' : ''">
 
-            <form>
-                <div class="container py-3 pt-7">
-                    <label class="text-lg" for="email-input">Email <span class="text-red-600 font-bold">*</span></label>
-                    <br />
-                    <input id="email-input" type="text" class="text-lg px-3 border-[1px] border-[#CACACA] mt-2 h-11 w-full font-[400] opacity-60" placeholder="Введіть email" />
+                    <div *ngIf="email.invalid && (email.dirty || email.touched)">
+                        <p class="text-red-500 text-sm mt-1" *ngIf="email.hasError('required')">
+                            Email обов'язковий.
+                        </p>
+                        <p class="text-red-500 text-sm mt-1" *ngIf="email.hasError('email')">
+                            Email повинен бути в правильному форматі.
+                        </p>
+                        <p class="text-red-500 text-sm mt-1" *ngIf="email.hasError('maxlength')">
+                            Довжина email не повинна перевищувати 254 символів.
+                        </p>
+                    </div>
                 </div>
-    
-                <div class="container py-3">
-                    <label class="text-lg" for="password-input">Пароль <span class="text-red-600 font-bold">*</span></label>
-                    <br />
-                    <div class="flex items-center border-[1px] border-[#CACACA] mt-2 h-11 w-full">
+                
+                <div class="mt-5">
+                    <label class="text-lg" for="password">Пароль <span class="text-red-600 font-bold">*</span></label>
+                    <br>
+                    <div class="flex items-center border-[1px] border-[#CACACA] mt-2 h-11 w-full" [ngClass]="password.invalid && password.touched ? 'border-red-500' : ''">
                         <input 
-                            id="password-input" 
+                            [(ngModel)]="this.password" 
+                            [pattern]="passwordPattern" 
+                            #password="ngModel" 
+                            required 
+                            minlength="8" 
+                            maxlength="30" 
                             [type]="passwordVisible ? 'text' : 'password'" 
-                            class="text-lg px-3 w-full font-[400] opacity-60 h-full" 
-                            placeholder="Введіть пароль" 
-                        />
+                            name="password" 
+                            type="password" 
+                            class="px-3 h-full w-full" 
+                            placeholder="Введіть пароль">
                         <span 
                             (click)="togglePasswordVisibility()" 
                             class="cursor-pointer ml-2 mt-1 mr-3"
@@ -33,33 +60,35 @@
                             </span>
                         </span>
                     </div>
-                </div>                          
 
-                <div class="container py-3 flex w-full">
-                    <div class="w-1/2 flex items-center">
-                        <input id="remember-me" type="checkbox" class="size-4">
-                        <label for="remember-me" class="text-[#686868] ml-2 text-lg hover:cursor-pointer">Запам'ятати мене</label>
-                    </div>
-
-                    <div class="w-1/2 flex justify-end items-center self-end text-right">
-                        <a class="text-lg text-[#686868] font-semibold hover:underline cursor-pointer">Забули пароль?</a>
+                    <div *ngIf="password.invalid && (password.dirty || password.touched)">
+                        <p class="text-red-500 text-sm mt-1" *ngIf="password.hasError('required')">
+                            Пароль обов'язковий.
+                        </p>
+                        <p class="text-red-500 text-sm mt-1" *ngIf="password.hasError('minlength')">
+                            Довжина пароля повинна бути щонайменше 8 символів.
+                        </p>
+                        <p class="text-red-500 text-sm mt-1" *ngIf="password.hasError('maxlength')">
+                            Довжина пароля не повинна перевищувати 30 символів.
+                        </p>
+                        <p class="text-red-500 text-sm mt-1" *ngIf="password.hasError('pattern')">
+                            Пароль повинен містити хоча б одну велику літеру, одну цифру і один спеціальний символ.
+                        </p>
                     </div>
                 </div>
 
-                <div class="container py-3 w-full">
-                    <button type="submit" class="w-full bg-[#006D77] h-16 text-white text-lg hover:bg-[#308D91] duration-300">Увійти</button>
-                </div>
+                <button class="text-lg w-full mt-8 py-3 text-white " [ngClass]="form.invalid ? 'bg-[#62a2a8]' : 'bg-[#006D77]'" [disabled]="!form.valid">Увійти</button>
             </form>
 
-            <div class="flex items-center my-4">
+            <div class="flex items-center my-5">
                 <hr class="flex-1 border-t-[1px] border-gray-300">
                 <span class="mx-4 text-gray-600">Або</span>
                 <hr class="flex-1 border-t-[1px] border-gray-300">
             </div>
 
-            <form>
-                <div class="container py-3 w-full">
-                    <button type="submit" class="w-full h-16 border-[1px] border-[#CACACA] flex items-center justify-center space-x-2">
+            <form >
+                <div class="w-full">
+                    <button type="submit" class="w-full p-3 border-[1px] border-[#CACACA] flex items-center justify-center space-x-2">
                         <img src="https://developers.google.com/static/identity/images/g-logo.png" alt="Google Logo" class="w-6 h-6">
                         <span class="text-lg">Увійти через Google</span>
                     </button>
@@ -67,4 +96,4 @@
             </form>
         </div>
     </div>
-</body>
+</div>
