--- a/src/app/features/register/register.component.html
+++ b/src/app/features/register/register.component.html
@@ -1,12 +1,34 @@
 <div class="animated-gradient-background flex flex-col justify-center xl:min-h-screen">
     <div class="flex flex-col items-center">
         <div class="w-full px-10 py-10 bg-white xl:rounded-lg xl:my-5 xl:w-1/2">
-            <h1 class="text-4xl font-medium lg:pt-12 max-sm:pt-10">Вітаємо!</h1>
-            <div class="container pt-1">
-                <p class="text-[#6C6C6C] text-md font-normal inline">Немає акаунту? </p>
-                <p class="text-[#6C6C6C] text-md font-normal inline hover:underline cursor-pointer" routerLink="/register">Зареєструйтесь</p>
-            </div>
+            <h1 class="text-4xl font-medium mt-4">Створіть акаунт</h1>
+            <p class="text-[#6C6C6C] text-md font-normal inline">Вже зареєстровані? </p>
+            <p class="text-[#6C6C6C] text-md font-normal inline hover:underline cursor-pointer" routerLink="/login">Увійдіть тут</p>
             <form #form="ngForm">
+                <div class="mt-5">
+                    <label class="text-lg" for="username">Ім'я користувача <span class="text-red-600 font-bold">*</span></label>
+                    <br>
+                    <input 
+                        [(ngModel)]="this.username" 
+                        #username="ngModel" 
+                        name="username" 
+                        type="text" 
+                        required 
+                        maxlength="30" 
+                        class="border-[1px] px-3 py-2 mt-2 w-full" 
+                        placeholder="Введіть ім'я користувача"
+                        [ngClass]="username.invalid && username.touched ? 'border-red-500' : ''">
+                    
+                    <div *ngIf="username.invalid && (username.dirty || username.touched)">
+                        <p class="text-red-500 text-sm mt-1" *ngIf="username.hasError('required')">
+                            Ім'я користувача обов'язкове.
+                        </p>
+                        <p class="text-red-500 text-sm mt-1" *ngIf="username.hasError('maxlength')">
+                            Довжина імені користувача не повинна перевищувати 30 символів.
+                        </p>
+                    </div>
+                </div>
+                
                 <div class="mt-5">
                     <label class="text-lg" for="email">Email <span class="text-red-600 font-bold">*</span></label>
                     <br>
@@ -77,7 +99,32 @@
                     </div>
                 </div>
 
-                <button class="text-lg w-full mt-8 py-3 text-white " [ngClass]="form.invalid ? 'bg-[#62a2a8]' : 'bg-[#006D77]'" [disabled]="!form.valid">Увійти</button>
+                <div class="mt-5">
+                    <label class="text-lg" for="confirmPassword">Підтвердження пароля <span class="text-red-600 font-bold">*</span></label>
+                    <br>
+                    <div class="flex items-center border-[1px] border-[#CACACA] mt-2 h-11 w-full" [ngClass]="confirmPassword.invalid || !isConfirmPasswordCorrect() && confirmPassword.touched ? 'border-red-500' : ''">
+                        <input 
+                            [(ngModel)]="this.confirmPassword" 
+                            [type]="passwordVisible ? 'text' : 'password'" 
+                            name="confirmPassword" 
+                            type="password" 
+                            class="px-3 h-full w-full" 
+                            placeholder="Підтвердіть пароль" 
+                            #confirmPassword="ngModel">
+                        <span (click)="togglePasswordVisibility()" class="cursor-pointer ml-2 mt-1 mr-3">
+                            <span class="material-icons">{{ passwordVisible ? 'visibility_off' : 'visibility' }}</span>
+                        </span>
+                    </div>
+                
+                    <div *ngIf="confirmPassword && !isConfirmPasswordCorrect() && confirmPassword.touched || confirmPassword.invalid && (confirmPassword.dirty || confirmPassword.touched)">
+                        <p class="text-red-500 text-sm mt-1" *ngIf="confirmPassword.hasError('required')">Підтвердження пароля обов'язкове.</p>
+                        <p class="text-red-500 text-sm mt-1" *ngIf="!isConfirmPasswordCorrect()">Паролі не збігаються.</p>
+                    </div>
+                </div>
+                
+                <app-form-button 
+                    [text]="'Зареєструватись'" 
+                    [disabled]="!form.valid || !isConfirmPasswordCorrect()"></app-form-button>
             </form>
 
             <div class="flex items-center my-5">
@@ -87,12 +134,7 @@
             </div>
 
             <form >
-                <div class="w-full">
-                    <button type="submit" class="w-full p-3 border-[1px] border-[#CACACA] flex items-center justify-center space-x-2">
-                        <img src="https://developers.google.com/static/identity/images/g-logo.png" alt="Google Logo" class="w-6 h-6">
-                        <span class="text-lg">Увійти через Google</span>
-                    </button>
-                </div>
+                <app-google-sign-button></app-google-sign-button>
             </form>
         </div>
     </div>
