--- a/src/app/features/login/login.component.scss
+++ b/src/app/features/login/login.component.scss
@@ -1,18 +1,5 @@
-@keyframes gradientAnimation {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-  
+@import '../../assets/animations/background-animation';
+
 .animated-gradient-background {
-    background: linear-gradient(45deg, #006D77, #83C5BE, #D4E9E2, #006D77);
-    background-size: 400% 400%;
-    animation: gradientAnimation 15s ease infinite;
+  @include animated-gradient-background;
 }
-  
