--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
+@import 'bootstrap/scss/functions';
+@import 'bootstrap/scss/variables';
+@import 'bootstrap/scss/mixins';
+@import 'ngx-toastr/toastr-bs5-alert';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
