Implement login functionality

--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -6,12 +6,12 @@
                 <p class="text-[#6C6C6C] text-md font-normal inline">Немає акаунту? </p>
                 <p class="text-[#6C6C6C] text-md font-normal inline hover:underline cursor-pointer" routerLink="/register">Зареєструйтесь</p>
             </div>
-            <form #form="ngForm">
+            <form #form="ngForm" (ngSubmit)="onLoginSubmit()">
                 <div class="mt-5">
                     <label class="text-lg" for="email">Email <span class="text-red-600 font-bold">*</span></label>
                     <br>
                     <input 
-                        [(ngModel)]="this.email" 
+                        [(ngModel)]="this.loginRequest.email" 
                         #email="ngModel" 
                         required 
                         maxlength="254" 
@@ -40,7 +40,7 @@
                     <br>
                     <div class="flex items-center border-[1px] border-[#CACACA] mt-2 h-11 w-full" [ngClass]="password.invalid && password.touched ? 'border-red-500' : ''">
                         <input 
-                            [(ngModel)]="this.password" 
+                            [(ngModel)]="this.loginRequest.password" 
                             [pattern]="passwordPattern" 
                             #password="ngModel" 
                             required 
